# MyRocketSimulator

./: .gitignore  License.txt  MANIFEST.in  README.md  changelog.md  pyproject.toml
MRS_examples/: MRSexample0.py  MRSexample1.py  MRSexample2.py  MRSexample3.py
MRS_examples/GMATscripts/: GMAT_example1_24hours.script  GMAT_example2_10hours.script
MRS_examples/MRSmissions/: CREMEdefaultmission.py
MRS_examples/MRSoutput/: MRS example 3 mission_missionDF.csv
MRS_examples/referenceCSVs/: GMAT_example1_24hours.csv  GMAT_example2_10hours.csv
myrocketsimulator/: MRSguidance.py  MRSlib.py  MRSrocket.py  MRSvislib.py
myrocketsimulator/data/: defaultMRSmission.py
