[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myrocketsimulator"
version = "1.0.2"
license = {file = "LICENSE.txt"}
authors = [
  { name="Thibault Bautze-Scherff", email="thibault@bautze-scherff.de" },
]
description = "MyRocketSimulator allows to simulate complex rocket missions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "skyfield>=1.45",
    "pandas",
    "scipy",
    "spaceweather",
    "nrlmsise00",
    "pyshtools",
    "numpy"
]


[tool.setuptools]
include-package-data = true
packages = ["myrocketsimulator"]

