[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myrocketsimulator"
version = "1.1.1"
license = {file = "LICENSE.txt"}
authors = [
  { name="Thibault Bautze-Scherff", email="admin@myrocketsimulator.com" },
]
description = "MyRocketSimulator is a Python package designed to simulate spacecrafts launching from Earth and orbiting around it or flying to the Moon."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.0",
    "skyfield>=1.45",
    "pandas>=1.3.4",
    "scipy>=1.7.1",
    "spaceweather>=0.2.2",
    "nrlmsise00>=0.0.1",
    "pyshtools>=4.10",
    "numpy>=1.21.6"
]

[project.urls]
repository = "https://github.com/ThibaultBS/MyRocketSimulator/tree/main"
changelog = "https://github.com/ThibaultBS/MyRocketSimulator/blob/main/changelog.md"


[tool.setuptools]
include-package-data = true
packages = ["myrocketsimulator"]

